# sope

./: .gitignore  Cargo.toml  README.md
examples/: sope_bcast.rs  sope_collective.rs  sope_distribution.rs  sope_reductions.rs  sope_shift.rs  sope_sort.rs  sope_test.rs  test_input.yml
src/: bcast.rs  collective.rs  comm.rs  distribution.rs  lib.rs  log.rs  partition.rs  reduction.rs  shift.rs  util.rs
src/sort/: bitonicsort.rs  mod.rs  samplesort.rs
