[package]
name = "sope"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.29"
num = "0.4.3"
once_cell = "1.21.3"
mpi = { version = "0.8.1", features = ["user-operations", "derive"] }
parking_lot = "0.12.5"
rand = { version = "0.9.2", features = ["small_rng"] }
rand_chacha = "0.9.0"
thiserror = "2.0.17"

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive", "std"] }
serde_json = "1.0"
serde-saphyr = "0.0.16"
